CHANGES.txt - 07/27/2002
------------------------

CHANGES IN HTMLDOC v1.8.21

    NEW FEATURES

	- HTMLDOC now supports heading levels 1 to 15.
	- HTMLDOC now allows the author to omit headings from
	  the TOC using the _HD_OMIT_TOC attribute.
	- HTMLDOC now supports remote book files when running
	  from the command-line.
	- HTMLDOC now supports hexadecimal character constants
	  (&#xFF)

    CHANGES

	- HTMLDOC now calculates the resolution of the body
	  image using the printable width instead of the page
	  width.
	- HTMLDOC should now compile out-of-the-box using the
	  Cygwin tools.
	- HTMLDOC no longer inserts whitespace between text
	  inside DIV elements.
	- HTMLDOC now supports quoted usernames and passwords in
	  URLs.

    BUG FIXES

	- "make install" didn't work in the fonts directory.
	- "&euro;" didn't work, while "&#128;" did: the
	  character name table was not sorted properly...
	- Links didn't always point to the right page in PDF
	  output.
	- XRX comment output could crash HTMLDOC.
	- Fixed-width columns in tables could be resized by
	  HTMLDOC.
	- When writing PostScript commands, some printers reset
	  their duplexing state when a new setpagedevice command
	  is received; we now cache the current duplex state and
	  change it only as needed.
	- The MEDIA SIZE comment didn't adjust the printable
	  size for the current landscape setting.
	- HTMLDOC placed the header one line too high.


CHANGES IN HTMLDOC v1.8.20

    NEW FEATURES

	- New --nup and NUMBER-UP options for PostScript and PDF
	  output.
	- HTMLDOC now logs HTML errors.
	- HTMLDOC now supports the A3, B, Legal, and Tabloid
	  size names.
	- HTMLDOC now supports embedding of the base Type1 fonts
	  in PostScript and PDF output.

    CHANGES

	- The HTML parser now allows BODY to auto-close HEAD and
	  visa-versa.

    BUG FIXES

	- HTMLDOC wouldn't compile using GCC under HP-UX due to
	  a badly "fixed" system header file (vmtypes.h).